syntax = "proto3";
package protos;
option java_outer_classname = "MovieDetailsProto";
option java_package = "protos";

message MovieDetails {
  int64 movieId = 1;
  string title = 2;
  string director = 3;
  int64 release_year = 4;
  repeated string genre = 5;
  string rating = 6;
  string description = 7;
  repeated Cast cast = 8;
}

enum Genre {
  ACTION = 0;
  COMEDY = 1;
  DRAMA = 2;
  HORROR = 3;
  ROMANCE = 4;
  THRILLER = 5;
  ADVENTURE = 6;
}

message Cast {
  string actor_name = 1;
  string character_name = 2;
}



